After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783849 - gnome-rr-config: Fix memory leak
gnome-rr-config: Fix memory leak
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-16 04:11 UTC by Mohammed Sadiq
Modified: 2017-08-21 23:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-rr-config: Fix memory leak (711 bytes, patch)
2017-06-16 04:11 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-06-16 04:11:36 UTC
.
Comment 1 Mohammed Sadiq 2017-06-16 04:11:47 UTC
Created attachment 353870 [details] [review]
gnome-rr-config: Fix memory leak
Comment 2 Rui Matos 2017-06-16 10:03:34 UTC
Review of attachment 353870 [details] [review]:

looks good, thanks
Comment 3 Bastien Nocera 2017-08-21 23:07:58 UTC
Attachment 353870 [details] pushed as c9f0272 - gnome-rr-config: Fix memory leak